Fixed typos, updated year.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/2001/REC-xhtml11-20010531/DTD/xhtml11-flat.dtd">
 <!--
-	Copyright (C) 2008 by #dokuleser.
+	Copyright (C) 2008-2011 by #dokuleser.
 	All rights reserved.
 
 	This page was entirely written in Vim, then syn broke the encoding with
@@ -34,9 +34,9 @@
 			alles, und wir sind stolz darauf!<br /><br />
 
 			<strong>Wer ist das eigentlich?</strong> <span class="dl">#dokuleser</span>, das sind f&uuml;nf
-			dynamisch-erfolgreiche junge M&auml;nner und eine nicht ganz so erfolgreiche Studentin. Seit zwei Jahren
+			dynamisch-erfolgreiche junge M&auml;nner und eine nicht ganz so erfolgreiche Studentin. Seit fünf Jahren
 			besteht unsere kleine Gruppe und entwickelt sich kontinuierlich
-			weiter. <span class="dl">#dokuleser</span> - dass ist lecker Schokolade und knusprig
+			weiter. <span class="dl">#dokuleser</span> - das ist lecker Schokolade und knusprig
 			geballte Kompetenz. <span class="dl">#dokuleser</span>, das sind<br /><br />
 
 			<ul>
@@ -53,7 +53,7 @@
 
 				<li><strong>Winni</strong>, Postfix-Gro&szlig;meister, aktuell
 				besch&auml;ftigt als Callboy bei einem indischen
-				Steak-Lieferservice, Aktfotograf, Profi-Gittarist und 
+				Steak-Lieferservice, Aktfotograf, Profi-Gitarrist und 
 				nebenberuflich Inhaber eines der
 				gr&ouml;&szlig;ten Webhosting Unternehmen in Deutschland</li>
 
@@ -76,9 +76,7 @@
 		</div>
 
 		<div class="version">
-			$LastChangedDate: 2008-03-08 17:51:35 +0100 (Sa, 08 Mär 2008) $<br/>
-			$LastChangedRevision: 32 $<br/>
-			$LastChangedBy: wneessen $<br/>
+			Changed: Tue Dec 28 18:18:16 CET 2010
 		</div>
 	</body>
 </html>
