--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			alles, und wir sind stolz darauf!<br /><br />
 
 			<strong>Wer ist das eigentlich?</strong> <span class="dl">#dokuleser</span>, das sind f&uuml;nf
-			dynamisch-erfolgreiche junge M&auml;nner und eine nicht ganz so erfolgreiche Studentin. Seit fünf Jahren
+			dynamisch-erfolgreiche junge M&auml;nner und eine nicht ganz so erfolgreiche Studentin. Seit f&uuml;nf Jahren
 			besteht unsere kleine Gruppe und entwickelt sich kontinuierlich
 			weiter. <span class="dl">#dokuleser</span> - das ist lecker Schokolade und knusprig
 			geballte Kompetenz. <span class="dl">#dokuleser</span>, das sind<br /><br />
@@ -69,7 +69,7 @@
 				in Wiesbaden,</li>
 
 				<li>und <strong>Philipp</strong>, Langzeitstudentin seit
-				gef&uuml;hlten 40 Jahren, Expertin für s&auml;mtliche Schreibweisen von
+				gef&uuml;hlten 40 Jahren, Expertin f&uuml;r s&auml;mtliche Schreibweisen von
 				"Mississippi", au&szlig;erdem professionelle Fotografin von
 				Bruchbuden.</li>
 			</ul>
