--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<li><strong>Christian</strong>, stadtbekannter Kabeldreher,
 				ungeschlagen im Umgang mit s&auml;mtlichen Funktionen der
 				<code>printf</code>-Familie und
-				nebenberuflicher Lastkraftwagen Fahrer mit
+				nebenberuflicher Lastkraftwagenfahrer mit
 				Spezialisierung auf Webseiten und schlecht
 				optimierte Datenbank-Tabellen</li>
 
