unexist ain't a vegetarian anymore! \o/

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
 				<li><strong>Christoph</strong>, Python- und PHP-Programmierer mit
 				Leib und Seele, Verfechter neumodischer Build-Systeme,
-				au&szlig;erdem Vorsitzender der Vereinigung vegetarischer Benutzer
+				au&szlig;erdem Vorsitzender der Vereinigung <strike>vegetarischer</strike> Benutzer
 				wenig verbreiteter bis g&auml;nzlich unbekannter Window Manager
-				(VVBWVGUWM)</li>
+				(V<strike>V</strike>BWVGUWM)</li>
 
 				<li><strong>Jonas</strong>, bekannt f&uuml;r seine weltweit
 				anerkannten Arbeiten zugunsten der stetigen Weiterentwicklung
